added code to table cell and new classes

--- a/DreamLister/Base.lproj/Main.storyboard
+++ b/DreamLister/Base.lproj/Main.storyboard
@@ -38,11 +38,11 @@
                                 <rect key="frame" x="16" y="132" width="343" height="535"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="vvS-Mp-FjR">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Item Cell" rowHeight="150" id="vvS-Mp-FjR" customClass="ItemCell" customModule="DreamLister" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vvS-Mp-FjR" id="WnD-tL-MCm">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="149"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Sp-AC-Vk4">
@@ -85,6 +85,12 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="details" destination="SIc-TL-Ss8" id="akZ-5W-TI5"/>
+                                            <outlet property="price" destination="baO-5b-yEQ" id="w5a-pM-33Q"/>
+                                            <outlet property="thumb" destination="NvF-vw-gKS" id="UdF-a4-pco"/>
+                                            <outlet property="title" destination="QbR-8G-OWn" id="Rnp-Ov-pqI"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -105,6 +111,10 @@
                             <color key="tintColor" red="0.020275836404257286" green="0.013597008807990252" blue="0.029743020304568546" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="segment" destination="aL3-WE-bvm" id="i1y-Mr-Ojx"/>
+                        <outlet property="tableView" destination="Euf-7K-yVH" id="1y6-TX-VYB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
